# zorita

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
.github/actions/: action.yaml
.github/workflows/: linters.yaml  test.yaml
conan/profiles/: debug  release  tests-debug  tests-debug-apple_clang-macos-arm64  tests-debug-clang-linux-arm64  tests-release  tests-release-apple_clang-macos-arm64  tests-release-clang-linux-arm64
docs/: code_design.md  code_examples.md  instruction_set.md  machine_model.md  machine_model_and_instruction_set.md
include/zorita/: Condition.hpp  Decoder.hpp  Error.hpp  Instruction.hpp  Machine.hpp  MachineModel.hpp  Memory.hpp  Registers.hpp  StatusRegister.hpp  Version.hpp  version.hpp
res/: add_r0_r0_r1.zor  cmp_r0_r1.zor  jmp_carry.zor  jmp_greater_or_equal.zor  jmp_less_or_equal.zor  jmp_less_than.zor  jmp_negative.zor  jmp_not_carry.zor  jmp_not_negative.zor  jmp_not_overflow.zor  jmp_not_zero.zor  load_r0_r1.zor  size_65537_words.zor  store_r0_r1.zor  sub_r0_r0_r1.zor
scripts/: run_cpp_linters.py
src/: CMakeLists.txt  Condition.cpp  Decoder.cpp  Instruction.cpp  Machine.cpp  Memory.cpp  Registers.cpp  StatusRegister.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
test/integration/: CMakeLists.txt
test/unit/: CMakeLists.txt  Condition.cpp  Decoder.cpp  Instruction.cpp  Machine.cpp  Memory.cpp  Registers.cpp  StatusRegister.cpp
